Add gender, department,salary in form

--- a/pages/EmployeePayrollApp.html
+++ b/pages/EmployeePayrollApp.html
@@ -46,7 +46,37 @@
                     </label>
                 </div>
             </div>
-        </form>
+            <div class="row-content">
+                <label class="label text" for="gender">Gender</label>
+                <div>
+                    <input type="radio" name="gender" id="male" value="male">
+                    <label class="text" for="female">Male</label>
+                    <input type="radio" name="gender" id="female" value="female">
+                    <label class="text" for="female">Female</label>
+                </div>
+            </div>
+            <div class="row-content">
+                <label class="label text" for="department">Department</label>
+                <div>
+                    <input class="checkbox" type="checkbox" name="hr" id="hr" value="hr">
+                    <label class=" text" for="hr">Hr</label>
+                    <input class="checkbox" type="checkbox" name="sales" id="sales" value="sales">
+                    <label class=" text" for="sales">Sales</label>
+                    <input class="checkbox" type="checkbox" name="finance" id="finance" value="finance">
+                    <label class=" text" for="finance">Finance</label>
+                    <input class="checkbox" type="checkbox" name="engineer" id="engineer" value="engineer">
+                    <label class=" text" for="engineer">Engineer</label>
+                    <input class="checkbox" type="checkbox" name="other" id="other" value="other">
+                    <label class=" text" for="other">Other</label>
+                </div>
+            </div>
+            <div class="row-content">
+                <label class="label text" for="salary">Salary</label>
+                <input class="input" type="range" name="salary" id="salary" max="800000" min="600000" step="100" value=700000>
+                <output class="Salary-output text" for="salary">700000</output>
+            </div>
+    </div>
+    </form>
     </div>
 </body>
 
