--- a/pages/EmployeePayrollApp.html
+++ b/pages/EmployeePayrollApp.html
@@ -1,4 +1,4 @@
-<!<!DOCTYPE html>
+<!DOCTYPE html>
 
 <head>
     <title>Employee Payroll Form</title>
@@ -132,6 +132,17 @@
                     <option value="2017">2017</option>
                     <option value="2016">2016</option>
                 </select>
+                </div>
+            </div>
+            <div class="row-content">
+                <label class="label text" for="notes">Notes</label>
+                <textarea class="input" id="notes" name="notes" placeholder="Type Your Notes Here" style="height: 100px;"></textarea>
+            </div>
+            <div class="buttonParent">
+                <a href="./home.html" class="resetButton button cancelButton">Cancel</a>
+                <div class="submit-reset">
+                    <button class="submitButton button" type="submit" id="submit">Submit</button>
+                    <button class="resetButton button" type="reset" id="reset">Reset</button>
                 </div>
             </div>
     </div>
