--- a/pages/home.html
+++ b/pages/home.html
@@ -16,18 +16,18 @@
         <div class="logo-content">
             <img src="../assets/images/logo.png" alt="Logo">
             <div>
-                <span class="emp-text">Employee</span><br>
-                <span class="emp-text emp-payroll">PayRoll</span>
+                <span class="emp-text"><strong>EMPLOYEE</strong></span>
+                <br>
+                <span class="emp-text emp-payroll"><strong>PAYROLL</strong></span>
             </div>
         </div>
     </header>
     <div class="main-content">
         <div class="header-content">
-            <div class="emp-detail-text">
-                Employee Details
-                <div class="emp-count">10</div>
+            <div class="emp-detail-text">Employee Details
+                <div class="emp-count"></div>
             </div>
-            <a href="../pages/EmployeePayrollApp.html" class="add-button"><img src="../assets/icons/add-24px.svg" alt="">Add User</a>
+            <a href="../pages/EmployeePayroll.html" class="add-button"><img style="padding-bottom: 5px; vertical-align:middle; padding-right: 5px; height: 25px;" src="../assets/icons/add-24px.svg" alt="">Add User</a>
         </div>
         <div class="table-main">
             <table id="display" class="table">
