--- a/pages/EmployeePayrollApp.html
+++ b/pages/EmployeePayrollApp.html
@@ -12,7 +12,7 @@
     <script src="../js/form.js"></script>
     <script src="../js/home.js"></script>
     <script src="../js/utility.js"></script>
-    <script src="../js/siteProerties.js"></script>
+    <script src="../js/siteProperties.js"></script>
     <title>Employee Payroll Form</title>
 </head>
 
