--- a/pages/home.html
+++ b/pages/home.html
@@ -27,7 +27,7 @@
             <div class="emp-detail-text">Employee Details
                 <div class="emp-count"></div>
             </div>
-            <a href="../pages/EmployeePayroll.html" class="add-button"><img style="padding-bottom: 5px; vertical-align:middle; padding-right: 5px; height: 25px;" src="../assets/icons/add-24px.svg" alt="">Add User</a>
+            <a href="./EmployeePayrollApp.html" class="add-button"><img style="padding-bottom: 5px; vertical-align:middle; padding-right: 5px; height: 25px;" src="../assets/icons/add-24px.svg" alt="">Add User</a>
         </div>
         <div class="table-main">
             <table id="display" class="table">
@@ -38,7 +38,6 @@
     <script src="../js/home.js"></script>
     <script src="../js/utility.js"></script>
     <script src="../js/siteProperties.js"></script>
-    <script src="../js/EmployeePayroll.js"></script>
 </body>
 
 </html>
